--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Udit Deo | Academic Profile</title>
-    <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Udit Deo | Research Profile</title>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Udit Deo</h1>
-        <p>Focusing on fuzzy optimization, decision systems, and AI deployment</p>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="publications.html">Publications</a> |
-            <a href="experience.html">Experience</a> |
-            <a href="resume.html">Resume</a>
-        </nav>
-    </header>
-    <section>
-        <h2>Research Interests</h2>
-        <p>Visual Computing, Computer Vision, Deep Learning, Artificial Intelligence, Soft Computing,
-        Fuzzy Optimization, Decision Systems, and Multi-Criteria Optimization with a focus on
-        interpretable, intelligent, and real-world systems.</p>
-    </section>
-    <section>
-        <h2>Contact</h2>
-        <ul>
-            <li>Email: <a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></li>
-            <li>GitHub: <a href="https://github.com/deoudit">deoudit</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/deoudit98">deoudit98</a></li>
-        </ul>
-    </section>
+  <div class="container">
+    <aside class="sidebar">
+      <img src="assets/profile.jpg" alt="Udit Deo" class="profile-img" />
+      <h1>Udit Deo</h1>
+      <p class="tagline">AI Researcher | Fuzzy Optimization | Deep Learning</p>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="publications.html">Publications</a>
+        <a href="resume.html">Resume</a>
+      </nav>
+      <div class="contact">
+        <p><strong>Email:</strong><br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
+        <p><strong>GitHub:</strong><br><a href="https://github.com/deoudit">deoudit</a></p>
+        <p><strong>LinkedIn:</strong><br><a href="https://linkedin.com/in/deoudit98">deoudit98</a></p>
+      </div>
+    </aside>
+
+    <main class="content">
+      <h2>About Me</h2>
+      <p>I am a postgraduate researcher at MANIT Bhopal with deep interest in AI deployment, fuzzy systems, and decision theory. My research aims to design interpretable, real-world intelligent systems using optimization, deep learning, and soft computing.</p>
+
+      <h3>Research Interests</h3>
+      <ul>
+        <li>Fuzzy Optimization & Relation Inequalities</li>
+        <li>Multi-Criteria Decision Systems</li>
+        <li>Computer Vision & Deep Learning</li>
+        <li>Soft Computing & Interpretable AI</li>
+      </ul>
+    </main>
+  </div>
 </body>
 </html>
