--- a/publications.html
+++ b/publications.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Publications | Udit Deo</title>
-    <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8" />
+  <title>Publications | Udit Deo</title>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    <header><h1>Publications</h1><a href="index.html">← Home</a></header>
-    <section>
-        <ol>
-            <li>
-                <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br>
-                <i>CICTN 2025 (IEEE)</i><br>
-                <a href="https://doi.org/10.1109/CICTN64563.2025.10932336">DOI</a>
-            </li>
-            <li>
-                <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br>
-                <i>ICAIA 2025 (Springer AIS Series)</i> - Under Publication
-            </li>
-            <li>
-                <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br>
-                <i>ICCCNT 2025 (IEEE)</i> - Accepted, To Appear
-            </li>
-        </ol>
-    </section>
+  <div class="container">
+    <aside class="sidebar">
+      <h1>Udit Deo</h1>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="publications.html">Publications</a>
+        <a href="resume.html">Resume</a>
+      </nav>
+    </aside>
+
+    <main class="content">
+      <h2>Publications</h2>
+      <ol>
+        <li>
+          <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br>
+          <em>CICTN 2025 (IEEE)</em> — <a href="https://doi.org/10.1109/CICTN64563.2025.10932336">DOI</a>
+        </li>
+        <li>
+          <strong>A New Approach to Fuzzy Relation Inequalities</strong><br>
+          <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication
+        </li>
+        <li>
+          <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br>
+          <em>ICCCNT 2025 (IEEE)</em> — Accepted
+        </li>
+      </ol>
+    </main>
+  </div>
 </body>
 </html>
