--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Udit Deo | Research Profile</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Udit Deo • Home</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="container">
-    <aside class="sidebar">
-      <img src="assets/profile.jpg" alt="Udit Deo" class="profile-img" />
-      <h1>Udit Deo</h1>
-      <p class="tagline">AI Researcher | Fuzzy Optimization | Deep Learning</p>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="publications.html">Publications</a>
-        <a href="resume.html">Resume</a>
-      </nav>
-      <div class="contact">
-        <p><strong>Email:</strong><br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
-        <p><strong>GitHub:</strong><br><a href="https://github.com/deoudit">deoudit</a></p>
-        <p><strong>LinkedIn:</strong><br><a href="https://linkedin.com/in/deoudit98">deoudit98</a></p>
-      </div>
-    </aside>
-
-    <main class="content">
-      <h2>About Me</h2>
-      <p>I am a postgraduate researcher at MANIT Bhopal with deep interest in AI deployment, fuzzy systems, and decision theory. My research aims to design interpretable, real-world intelligent systems using optimization, deep learning, and soft computing.</p>
-
-      <h3>Research Interests</h3>
-      <ul>
-        <li>Fuzzy Optimization & Relation Inequalities</li>
-        <li>Multi-Criteria Decision Systems</li>
-        <li>Computer Vision & Deep Learning</li>
-        <li>Soft Computing & Interpretable AI</li>
-      </ul>
-    </main>
+  <div class="sidebar">
+    <img src="assets/images/profile.jpg" class="profile-img">
+    <h1>Udit Deo</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="bio.html">About</a>
+      <a href="publications.html">Publications</a>
+      <a href="cv.html">Resume</a>
+    </nav>
   </div>
+  <div class="main">
+    <h2>Welcome</h2>
+    <p>I’m a researcher in fuzzy optimization, decision systems, and interpretable AI...</p>
+  </div>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
