--- a/publications.html
+++ b/publications.html
@@ -2,36 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications | Udit Deo</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <div class="container">
     <aside class="sidebar">
+      <img src="assets/images/profile.jpg" class="profile-img" alt="Udit Deo">
       <h1>Udit Deo</h1>
       <nav>
-        <a href="index.html">About</a>
+        <a href="index.html">Home</a>
+        <a href="bio.html">About</a>
         <a href="publications.html">Publications</a>
-        <a href="resume.html">Resume</a>
+        <a href="cv.html">Resume</a>
       </nav>
     </aside>
 
-    <main class="content">
+    <main class="main">
       <h2>Publications</h2>
       <ol>
         <li>
           <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br>
-          <em>CICTN 2025 (IEEE)</em> — <a href="https://doi.org/10.1109/CICTN64563.2025.10932336">DOI</a>
+          <em>CICTN 2025 (IEEE)</em><br>
+          <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
         </li>
         <li>
-          <strong>A New Approach to Fuzzy Relation Inequalities</strong><br>
-          <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication
+          <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br>
+          <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication • Indexed in zbMATH
         </li>
         <li>
           <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br>
-          <em>ICCCNT 2025 (IEEE)</em> — Accepted
+          <em>ICCCNT 2025 (IEEE)</em> — Accepted, To Appear • Indexed in IEEE Xplore, Scopus
         </li>
       </ol>
+
+      <h3>Patent</h3>
+      <p><strong>Title:</strong> A Device for Producing Electricity Using Roof Air Ventilator<br>
+      <strong>Design No.:</strong> 440258-001<br>
+      <strong>Granted by:</strong> IP India under the Designs Act, 2000<br>
+      <strong>Issue Date:</strong> 07 April 2025</p>
     </main>
   </div>
 </body>
