--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
     <p>I’m a researcher in fuzzy optimization, decision systems, and interpretable AI...</p>
   </div>
   <script src="assets/js/main.js"></script>
+  <section class="projects">
+    <div class="project-card">
+      <h4>Fuzzy Optimizer</h4>
+      <p>Framework for fuzzy relation inequality-based decision systems.</p>
+    </div>
+    <div class="project-card">
+      <h4>Deep License Detector</h4>
+      <p>YOLO-powered vehicle plate reader with improved real-time accuracy.</p>
+    </div>
+  </section>
 </body>
 </html>
