--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects | Udit Deo</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <script>
+    // Auto-detect system dark mode
+    window.onload = function () {
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.add('dark-mode');
+      }
+    };
+  </script>
 </head>
 <body>
   <div class="container">
@@ -22,6 +30,11 @@
       <div class="toggle-wrapper">
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
+      <div class="contact">
+        <p>Email:<br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
+        <p>GitHub:<br><a href="https://github.com/deoudit">deoudit</a></p>
+        <p>LinkedIn:<br><a href="https://linkedin.com/in/deoudit98">deoudit98</a></p>
+      </div>
     </aside>
 
     <!-- Main Content -->
@@ -31,15 +44,19 @@
       <section class="projects">
         <div class="project-card">
           <h4>Fuzzy Optimizer</h4>
-          <p>Framework for fuzzy relation inequality-based decision systems. Integrated with weighted composition and real-world MCDA datasets.</p>
+          <p>Framework for fuzzy relation inequality-based decision systems using weighted composition, ranked aggregation, and interpretable rules.</p>
         </div>
         <div class="project-card">
           <h4>Deep License Detector</h4>
-          <p>YOLOv3-powered vehicle license plate detector with improved accuracy via transfer learning and image augmentation.</p>
+          <p>YOLOv3-powered vehicle license plate and axle detector with transfer learning. Achieved high accuracy with pre-trained MobileNet and ResNet.</p>
         </div>
         <div class="project-card">
           <h4>Backward Compatibility Checker</h4>
-          <p>Python tool used in Amdocs for validating legacy billing modules across releases, reducing manual effort by 90%.</p>
+          <p>Python + Bash tool built at Amdocs to validate legacy billing module logic. Saved 90% QA effort by automating DB and config diffs.</p>
+        </div>
+        <div class="project-card">
+          <h4>Client-Server Quality Allocator</h4>
+          <p>Multi-objective optimization tool using OWA and fuzzy techniques to allocate priorities in distributed systems with minimal conflict.</p>
         </div>
       </section>
     </main>
