--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,7 @@
         <a href="bio.html">About</a>
         <a href="publications.html">Publications</a>
         <a href="cv.html">Resume</a>
+        <a href="projects.html">Projects</a>
       </nav>
     </aside>
 
