--- a/index.html
+++ b/index.html
@@ -2,26 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Udit Deo • Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script>
+    // Auto-detect dark mode preference
+    window.onload = function () {
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.add('dark-mode');
+      }
+    };
+  </script>
 </head>
 <body>
-  <div class="sidebar">
-    <img src="assets/images/profile.jpg" class="profile-img">
-    <h1>Udit Deo</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="bio.html">About</a>
-      <a href="publications.html">Publications</a>
-      <a href="cv.html">Resume</a>
-      <a href="projects.html">Projects</a>
-    </nav>
+  <div class="container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <img src="assets/images/profile.jpg" class="profile-img" alt="Udit Deo" />
+      <h1>Udit Deo</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="bio.html">About</a>
+        <a href="publications.html">Publications</a>
+        <a href="cv.html">Resume</a>
+        <a href="projects.html">Projects</a>
+      </nav>
+      <div class="toggle-wrapper">
+        <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
+      </div>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="main">
+      <h2>Welcome</h2>
+      <p>I’m a researcher in fuzzy optimization, decision systems, and interpretable AI. My work focuses on developing intelligent, robust, and explainable systems with real-world applications.</p>
+    </main>
   </div>
-  <div class="main">
-    <h2>Welcome</h2>
-    <p>I’m a researcher in fuzzy optimization, decision systems, and interpretable AI...</p>
-  </div>
+
   <script src="assets/js/main.js"></script>
 </body>
 </html>
