--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en"><!-- head -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Resume | Udit Deo</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script>
+    // Auto-detect system dark mode
+    window.onload = function () {
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.add('dark-mode');
+      }
+    };
+  </script>
+</head>
 <body>
-  <div class="sidebar"><!-- sidebar --></div>
-  <div class="main">
-    <h2>Resume</h2>
-    <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600"></iframe>
-    <p><a href="assets/github_profile_resume_july2025.pdf" download>Download PDF</a></p>
+  <div class="container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <img src="assets/images/profile.jpg" class="profile-img" alt="Udit Deo" />
+      <h1>Udit Deo</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="bio.html">About</a>
+        <a href="publications.html">Publications</a>
+        <a href="cv.html">Resume</a>
+        <a href="projects.html">Projects</a>
+      </nav>
+      <div class="toggle-wrapper">
+        <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
+      </div>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="main">
+      <h2>Resume</h2>
+      <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600" title="Udit Deo Resume"></iframe>
+      <p><a href="assets/github_profile_resume_july2025.pdf" download>Download PDF</a></p>
+    </main>
   </div>
+
   <script src="assets/js/main.js"></script>
 </body>
 </html>
