--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,16 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-        <p>Email:<br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
-        <p>GitHub:<br><a href="https://github.com/deoudit">deoudit</a></p>
-        <p>LinkedIn:<br><a href="https://linkedin.com/in/deoudit98">deoudit98</a></p>
-      </div>
+  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
+    <i class="fas fa-envelope"></i> Email Me
+  </a>
+  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+    <i class="fab fa-github"></i> GitHub
+  </a>
+  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+    <i class="fab fa-linkedin"></i> Connect
+  </a>
+</div>
     </aside>
 
     <!-- Main -->
