--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications | Udit Deo</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script>
     // Auto-detect dark mode preference
     window.onload = function () {
@@ -30,6 +31,17 @@
       <div class="toggle-wrapper">
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
+      <div class="contact">
+  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
+    <i class="fas fa-envelope"></i> Email Me
+  </a>
+  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+    <i class="fab fa-github"></i> GitHub
+  </a>
+  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+    <i class="fab fa-linkedin"></i> Connect
+  </a>
+</div>
     </aside>
 
     <!-- Main Content -->
