--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,10 @@
     <main class="main">
       <h2>Resume</h2>
       <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600" title="Udit Deo Resume"></iframe>
-      <p><a href="assets/github_profile_resume_july2025.pdf" download>Download PDF</a></p>
+      <a href="assets/github_profile_resume_july2025.pdf" class="button download-button" download>
+  <i class="fas fa-download"></i> Download My Resume
+</a>
+
     </main>
   </div>
 
