--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
     <!-- Main Content -->
     <main class="main">
       <h2>Welcome</h2>
-      <p>I’m a researcher in fuzzy optimization, decision systems, and interpretable AI. My work focuses on developing intelligent, robust, and explainable systems with real-world applications.</p>
+      <p>
+  I’m a researcher in <strong>fuzzy optimization</strong>, <strong>multi-criteria decision systems</strong>, and <strong>interpretable AI</strong>.  
+  My work aims to bridge theoretical models with real-world problems by building intelligent, explainable, and robust systems.
+</p>
+
+<p>
+  I’ve developed solutions in domains like <em>relation inequalities</em>, <em>computer vision</em>, and <em>automated testing</em>, combining formal logic with modern AI techniques.
+  I also actively publish and present research in IEEE and Springer conferences.
+</p>
+
+<p>
+  Feel free to explore my <a href="projects.html">projects</a>, <a href="publications.html">publications</a>, or download my <a href="cv.html">CV</a>.
+</p>
+
     </main>
   </div>
 
