--- a/index.html
+++ b/index.html
@@ -61,27 +61,32 @@
         <div class="info-card">
           <h4><i class="fas fa-flask"></i> Research</h4>
           <p>Fuzzy logic, relation inequalities, decision modeling, deep learning, and soft computing.</p>
-          <a href="publications.html">View Publications</a>
+          <a href="publications.html" class="card-button">View Publications</a>
         </div>
 
         <div class="info-card">
           <h4><i class="fas fa-briefcase"></i> Industry</h4>
           <p>Worked at Amdocs and Stackfusion on C++, Python, regression testing, and computer vision pipelines.</p>
-          <a href="bio.html#industry">View Experience</a>
+          <a href="bio.html#industry" class="card-button">View Experience</a>
         </div>
 
         <div class="info-card">
           <h4><i class="fas fa-award"></i> Highlights</h4>
           <p>Patent granted (2025), JRF in UGC-NET, top 0.05% nationally, GATE qualified multiple times.</p>
-          <a href="bio.html">More About Me</a>
+          <a href="bio.html" class="card-button">More About Me</a>
         </div>
       </section>
 
       <!-- CTA Buttons -->
       <div class="cta-buttons">
-        <a href="projects.html" class="button">Explore Projects</a>
-        <a href="cv.html" class="button download-button"><i class="fas fa-download"></i> Download CV</a>
-      </div>
+  <a href="projects.html" class="button primary-button">
+    <i class="fas fa-folder-open"></i> Explore Projects
+  </a>
+  <a href="cv.html" class="button download-button">
+    <i class="fas fa-download"></i> Download CV
+  </a>
+</div>
+
     </main>
   </div>
 </body>
