--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script>
-    // Auto-detect dark mode preference
     window.onload = function () {
       if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark-mode');
@@ -32,44 +31,52 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
-    <i class="fas fa-envelope"></i> Email Me
-  </a>
-  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
-    <i class="fab fa-github"></i> GitHub
-  </a>
-  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
-    <i class="fab fa-linkedin"></i> Connect
-  </a>
-</div>
+        <a href="mailto:uditdeo1670@gmail.com" class="contact-link" title="uditdeo1670@gmail.com">
+          <i class="fas fa-envelope"></i> Udit’s Mail
+        </a>
+        <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+          <i class="fab fa-linkedin"></i> Connect
+        </a>
+      </div>
     </aside>
 
     <!-- Main Content -->
     <main class="main">
-      <h2>Publications</h2>
-      <ol>
-        <li>
-          <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br>
-          <em>CICTN 2025 (IEEE)</em><br>
-          <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
-        </li>
-        <li>
-          <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br>
-          <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication • Indexed in zbMATH
-        </li>
-        <li>
-          <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br>
-          <em>ICCCNT 2025 (IEEE)</em> — Accepted, To Appear • Indexed in IEEE Xplore, Scopus
-        </li>
-      </ol>
+      <section class="hero">
+        <h2><i class="fas fa-book"></i> Publications</h2>
+        <p>Peer-reviewed research accepted in IEEE and Springer conferences, indexed by Scopus and zbMATH.</p>
+      </section>
 
-      <h3>Patent</h3>
-      <p>
-        <strong>Title:</strong> A Device for Producing Electricity Using Roof Air Ventilator<br>
-        <strong>Design No.:</strong> 440258-001<br>
-        <strong>Granted by:</strong> IP India under the Designs Act, 2000<br>
-        <strong>Issue Date:</strong> 07 April 2025
-      </p>
+      <section>
+        <ol>
+          <li>
+            <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
+            <em>CICTN 2025 (IEEE)</em><br />
+            <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
+          </li>
+          <li>
+            <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br />
+            <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication • Indexed in zbMATH
+          </li>
+          <li>
+            <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br />
+            <em>ICCCNT 2025 (IEEE)</em> — Accepted, To Appear • Indexed in IEEE Xplore, Scopus
+          </li>
+        </ol>
+      </section>
+
+      <section>
+        <h3><i class="fas fa-certificate"></i> Patent</h3>
+        <p>
+          <strong>Title:</strong> A Device for Producing Electricity Using Roof Air Ventilator<br />
+          <strong>Design No.:</strong> 440258-001<br />
+          <strong>Granted by:</strong> IP India under the Designs Act, 2000<br />
+          <strong>Issue Date:</strong> 07 April 2025
+        </p>
+      </section>
     </main>
   </div>
 </body>
