--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
 
     <!-- Main Content -->
     <main class="main">
-      <h2>Resume</h2>
+      <h2><i class="fas fa-book"></i> Resume</h2>
       <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600" title="Udit Deo Resume"></iframe>
       <a href="assets/github_profile_resume_july2025.pdf" class="button download-button" download>
   <i class="fas fa-download"></i> Download My Resume
