--- a/cv.html
+++ b/cv.html
@@ -32,26 +32,39 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
-    <i class="fas fa-envelope"></i> Email Me
-  </a>
-  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
-    <i class="fab fa-github"></i> GitHub
-  </a>
-  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
-    <i class="fab fa-linkedin"></i> Connect
-  </a>
-</div>
+        <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
+          <i class="fas fa-envelope"></i> Udit’s Mail
+        </a>
+        <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+          <i class="fab fa-linkedin"></i> Connect
+        </a>
+      </div>
     </aside>
 
     <!-- Main Content -->
     <main class="main">
-      <h2><i class="fas fa-book"></i> Resume</h2>
-      <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600" title="Udit Deo Resume"></iframe>
-      <a href="assets/github_profile_resume_july2025.pdf" class="button download-button" download>
-  <i class="fas fa-download"></i> Download My Resume
-</a>
+      <!-- Hero Section -->
+      <!-- Hero Section -->
+<section class="hero">
+  <h2><i class="fas fa-file-alt"></i> Resume</h2>
+  <p>Download my resume for an in-depth overview of my academic and industry work.</p>
+</section>
 
+
+      <!-- Resume PDF Section -->
+      <section>
+        <iframe src="assets/github_profile_resume_july2025.pdf" width="100%" height="600" title="Udit Deo Resume"></iframe>
+      </section>
+
+      <!-- Download Button -->
+      <section>
+        <a href="assets/github_profile_resume_july2025.pdf" class="button download-button" download>
+          <i class="fas fa-download"></i> Download My Resume
+        </a>
+      </section>
     </main>
   </div>
 
