--- a/projects.html
+++ b/projects.html
@@ -31,26 +31,31 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
-    <i class="fas fa-envelope"></i> Email Me
-  </a>
-  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
-    <i class="fab fa-github"></i> GitHub
-  </a>
-  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
-    <i class="fab fa-linkedin"></i> Connect
-  </a>
-</div>
+        <a href="mailto:uditdeo1670@gmail.com" class="contact-link" title="uditdeo1670@gmail.com">
+          <i class="fas fa-envelope"></i> Udit’s Mail
+        </a>
+        <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+          <i class="fab fa-linkedin"></i> Connect
+        </a>
+      </div>
     </aside>
 
-    <!-- Main -->
+    <!-- Main Content -->
     <main class="main">
-      <h2>Projects</h2>
+      <!-- Hero Section -->
+      <section class="hero">
+        <h2><i class="fas fa-project-diagram"></i> Projects</h2>
+        <p>Explore my latest academic and industry projects that leverage fuzzy optimization, deep learning, and more.</p>
+      </section>
 
+      <!-- Projects Section -->
       <section class="projects">
         <!-- Project 1 -->
         <a href="https://github.com/deoudit/fuzzy-optimizer" class="project-card color1" target="_blank">
-          <img src="assets/images/fuzzy.png" class="icon" alt="Fuzzy Icon" />
+          <img src="assets/images/fuzzy.png" class="icon" alt="Fuzzy Optimizer Icon" />
           <h4>Fuzzy Optimizer</h4>
           <p>Framework for fuzzy relation inequality-based decision systems with MCDA support and weighted rules.</p>
           <div class="tags">
@@ -60,7 +65,7 @@
 
         <!-- Project 2 -->
         <a href="https://github.com/deoudit/license-detector" class="project-card color2" target="_blank">
-          <img src="assets/images/yolo.png" class="icon" alt="YOLO Icon" />
+          <img src="assets/images/yolo.png" class="icon" alt="YOLO Detector Icon" />
           <h4>Deep License Detector</h4>
           <p>YOLOv3-based license plate and axle detector with transfer learning and synthetic augmentation.</p>
           <div class="tags">
