--- a/projects.html
+++ b/projects.html
@@ -77,14 +77,15 @@
         </a>
 
         <!-- Project 3 -->
-        <a href="https://github.com/deoudit/bc-checker" class="project-card color3" target="_blank">
-          <i class="fas fa-code icon"></i>
-          <h4>Backward Compatibility Checker</h4>
-          <p>Python + Bash tool for testing legacy billing modules, automating regression testing in Amdocs.</p>
-          <div class="tags">
-            <span>Python</span><span>Shell</span><span>Automation</span>
-          </div>
-        </a>
+        <a href="https://github.com/deoudit/Automate_detection_and_recognition_of-grammatical_errors-" class="project-card color3" target="_blank">
+  <i class="fas fa-file-alt icon"></i>
+  <h4>Automate Detection and Recognition of Grammatical Errors</h4>
+  <p>This project performs grammatical error detection using Bi-LSTM. The code leverages pre-trained word embeddings that account for grammaticality and error patterns.</p>
+  <div class="tags">
+    <span>Bi-LSTM</span><span>Grammatical Error Detection</span><span>Word Embeddings</span>
+  </div>
+</a>
+
 
         <!-- Project 4 -->
         <a href="https://github.com/deoudit/owa_composition" class="project-card color4" target="_blank">
