--- a/projects.html
+++ b/projects.html
@@ -57,14 +57,7 @@
       <!-- Projects Section -->
       <section class="projects">
         <!-- Project 1 -->
-        <a href="https://github.com/deoudit/fuzzy-optimizer" class="project-card color1" target="_blank">
-          <img src="assets/images/fuzzy.png" class="icon" alt="Fuzzy Optimizer Icon" />
-          <h4>Fuzzy Optimizer</h4>
-          <p>Framework for fuzzy relation inequality-based decision systems with MCDA support and weighted rules.</p>
-          <div class="tags">
-            <span>Python</span><span>Fuzzy Logic</span><span>MCDA</span>
-          </div>
-        </a>
+        
 
         <!-- Project 2 -->
         <a href="https://github.com/deoudit/PlateDetectionApp" class="project-card color2" target="_blank">
@@ -80,12 +73,11 @@
         <a href="https://github.com/deoudit/Automate_detection_and_recognition_of-grammatical_errors-" class="project-card color3" target="_blank">
   <i class="fas fa-file-alt icon"></i>
   <h4>Automate Detection and Recognition of Grammatical Errors</h4>
-  <p>This project performs grammatical error detection using Bi-LSTM. The code leverages pre-trained word embeddings that account for grammaticality and error patterns.</p>
+  <p>This project performs grammatical error detection with Bi-LSTM. You can initialize Bi-LSTM with word embeddings that consider grammaticality and error patterns.</p>
   <div class="tags">
     <span>Bi-LSTM</span><span>Grammatical Error Detection</span><span>Word Embeddings</span>
   </div>
 </a>
-
 
         <!-- Project 4 -->
         <a href="https://github.com/deoudit/owa_composition" class="project-card color4" target="_blank">
