--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
         
 
         <!-- Project 2 -->
-        <a href="https://github.com/deoudit/PlateDetectionApp" class="project-card color2" target="_blank">
+        <!--<a href="https://github.com/deoudit/PlateDetectionApp" class="project-card color2" target="_blank">-->
           <img src="assets/images/yolo.png" class="icon" alt="YOLO Detector Icon" />
           <h4>Deep License Detector</h4>
           <p>YOLOv3-based license plate and axle detector with transfer learning and synthetic augmentation.</p>
@@ -70,7 +70,7 @@
         </a>
 
         <!-- Project 3 -->
-        <a href="https://github.com/deoudit/Automate_detection_and_recognition_of-grammatical_errors-" class="project-card color3" target="_blank">
+        <!--<a href="https://github.com/deoudit/Automate_detection_and_recognition_of-grammatical_errors-" class="project-card color3" target="_blank">-->
   <i class="fas fa-file-alt icon"></i>
   <h4>Automate Detection and Recognition of Grammatical Errors</h4>
   <p>This project performs grammatical error detection with Bi-LSTM. You can initialize Bi-LSTM with word embeddings that consider grammaticality and error patterns.</p>
@@ -80,7 +80,7 @@
 </a>
 
         <!-- Project 4 -->
-        <a href="https://github.com/deoudit/owa_composition" class="project-card color4" target="_blank">
+        <!--<a href="https://github.com/deoudit/owa_composition" class="project-card color4" target="_blank">-->
           <img src="assets/images/owa.png" class="icon" alt="OWA Icon" />
           <h4>Client-Server Quality Allocator</h4>
           <p>Multi-objective optimizer using fuzzy OWA aggregation for distributed QoS allocation.</p>
