--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
           </li>
           <li>
             <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br />
-            <em>ICCCNT 2025 (IEEE)</em> — Accepted, To Appear • Indexed in IEEE Xplore, Scopus
+            <em>ICCCNT 2025 (IEEE)</em> — Under Publication • Indexed in IEEE Xplore, Scopus
           </li>
         </ol>
       </section>
