--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
         <ol>
           <li>
             <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
-            <em>CICTN 2025 (IEEE)</em><br />
+            <em>CICTN 2025 (IEEE)</em> —
             <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
           </li>
           <li>
