--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="info-card">
           <h4><i class="fas fa-briefcase"></i> Industry</h4>
-          <p>Worked at Amdocs and Stackfusion on C++, Python, regression testing, and computer vision pipelines.</p>
+          <p>Worked at Amdocs and Stackfusion on C++, Python, Databases, and Computer Vision Pipelines.</p>
           <a href="bio.html#industry" class="card-button">View Experience</a>
         </div>
 
@@ -94,3 +94,4 @@
   </div>
 </body>
 </html>
+
