--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="info-card">
           <h4><i class="fas fa-award"></i> Highlights</h4>
           <p>Patent granted (2025), JRF in UGC-NET, top 0.05% nationally, GATE qualified multiple times.</p>
-          <a href="bio.html" class="card-button">More About Me</a>
+          <a href="bio.html#exams" class="card-button">More About Me</a>
         </div>
       </section>
 
@@ -94,4 +94,5 @@
   </div>
 </body>
 </html>
+
 
