--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,9 @@
         <p>Peer-reviewed research accepted in IEEE and Springer conferences, indexed by Scopus and zbMATH.</p>
       </section>
 
+        <!-- Published / Accepted -->
       <section>
+        <h3>Published / Accepted</h3>
         <ol>
           <li>
             <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
@@ -71,6 +73,23 @@
         </ol>
       </section>
 
+  <!-- Communicated -->
+  <section>
+    <h3>Communicated / Under Review</h3>
+    <ol>
+      <li>
+        Udit Deo, Jay Kumar Jain, MMS Beg. <br />
+        <strong>Multi-Objective Quality Allocation with OWA in Dynamic Server Networks</strong><br />
+        Communicated to <em>SN Computer Science</em> (Q2), Springer
+      </li>
+      <li>
+        Udit Deo, Jay Kumar Jain, MMS Beg. <br />
+        <strong>CAST: A Novel Cost-Aware Segmentation Tree for Optimized Temporal Quality Analysis of Fuzzy Systems</strong><br />
+        Communicated to <em>Soft Computing</em> (Q2), Springer
+      </li>
+    </ol>
+  </section>
+      
       <section>
         <h3><i class="fas fa-certificate"></i> Patent</h3>
         <p>
@@ -84,3 +103,4 @@
   </div>
 </body>
 </html>
+
