--- a/publications.html
+++ b/publications.html
@@ -58,17 +58,19 @@
         <h3>Published / Accepted</h3>
         <ol>
           <li>
-            <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
-            <em>CICTN 2025 (IEEE)</em> —
-            <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
+            <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br />
+            <em>International Conference on Computing, Communication and Networking Technologies (ICCCNT) 2025 (IEEE), IIT Indore, India</em> <br /> 
+            Under Publication • Indexed in IEEE Xplore, Scopus
           </li>
           <li>
             <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br />
-            <em>ICAIA 2025 (Springer AIS Series)</em> — Under Publication • Indexed in zbMATH
+            <em>International Conference on Artificial Intelligence and Applications (ICAIA) 2025 (Springer), MSIT Delhi, India</em> <br /> 
+            Under Publication • Indexed in zbMATH
           </li>
           <li>
-            <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br />
-            <em>ICCCNT 2025 (IEEE)</em> — Under Publication • Indexed in IEEE Xplore, Scopus
+            <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
+            <em>International Conference on Computational Intelligence, Communication Technology and Networking (CICTN) 2025 (IEEE), ABES Ghaziabad, India</em> —
+            <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
           </li>
         </ol>
       </section>
@@ -101,5 +103,6 @@
   </div>
 </body>
 </html>
+
 
 
