--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
           </li>
           <li>
             <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
-            <em>International Conference on Computational Intelligence, Communication Technology and Networking (CICTN) 2025 (IEEE), ABES Ghaziabad, India</em> —
+            <em>International Conference on Computational Intelligence, Communication Technology and Networking (CICTN) 2025 (IEEE), ABES Ghaziabad, India</em> <br />
             <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
           </li>
         </ol>
@@ -103,6 +103,7 @@
   </div>
 </body>
 </html>
+
 
 
 
