--- a/index.html
+++ b/index.html
@@ -89,11 +89,26 @@
     <i class="fas fa-download"></i> Download CV
   </a>
 </div>
+<p>
+  Visitors: <span id="visits">—</span>
+</p>
+<script async>
+  // Unique key: your domain, optionally add a path
+  fetch('https://api.countapi.xyz/hit/deoudit.github.io')
+    .then(r => r.json())
+    .then(d => {
+      document.getElementById('visits').textContent = d.value.toLocaleString();
+    })
+    .catch(() => {
+      document.getElementById('visits').textContent = 'n/a';
+    });
+</script>
 
     </main>
   </div>
 </body>
 </html>
+
 
 
 
