--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
   </a>
 </div>
 
-<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdeoudit.github.io%2F&title=Visitors" alt="visitor badge">
+<p>
+  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdeoudit.github.io%2F&count_bg=%2379C83D&title_bg=%23555555&icon=github.svg&icon_color=%23E7E7E7&title=Visitors&edge_flat=false" alt="visitor badge">
+</p>
+
 
       
     </main>
   </div>
 </body>
 </html>
+
 
 
 
