--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 </div>
 
 <p>
-  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdeoudit.github.io%2F&count_bg=%2379C83D&title_bg=%23555555&icon=github.svg&icon_color=%23E7E7E7&title=Visitors&edge_flat=false" alt="visitor badge">
+  <img src="https://komarev.com/ghpvc/?username=deoudit&label=Visitors&color=0e75b6&style=flat" alt="visitor badge"/>
 </p>
+
 
 
       
@@ -100,6 +101,7 @@
   </div>
 </body>
 </html>
+
 
 
 
