--- a/index.html
+++ b/index.html
@@ -93,30 +93,20 @@
 
 
 <style>
-.badge {
-  display:inline-flex; align-items:center; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  font-size:14px; line-height:1; border-radius:4px; overflow:hidden; border:1px solid #d0d7de;
-}
-.badge .label { background:#555; color:#fff; padding:6px 8px; }
-.badge .count { background:#0e75b6; color:#fff; padding:6px 8px; min-width:48px; text-align:center; }
+.badge{display:inline-flex;align-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;font-size:14px;line-height:1;border-radius:4px;overflow:hidden;border:1px solid #d0d7de}
+.badge .label{background:#555;color:#fff;padding:6px 8px}
+.badge .count{background:#0e75b6;color:#fff;padding:6px 8px;min-width:48px;text-align:center}
 </style>
 
-<div class="badge" id="visitors-badge">
-  <span class="label">Visitors</span>
-  <span class="count" id="visitors-count">—</span>
-</div>
+<div class="badge"><span class="label">Visitors</span><span class="count" id="visits">—</span></div>
 
 <script async>
-  // Increment and read the count (namespace: your domain, key: "visits")
-  fetch('https://api.countapi.xyz/update/deoudit.github.io/visits?amount=1')
-    .then(r => r.json())
-    .then(d => {
-      document.getElementById('visitors-count').textContent = d.value.toLocaleString();
-    })
-    .catch(() => {
-      document.getElementById('visitors-count').textContent = 'n/a';
-    });
+fetch('https://abacus.jasoncameron.dev/hit/deoudit.github.io/visits')
+  .then(r => r.json())
+  .then(d => { document.getElementById('visits').textContent = d.value.toLocaleString(); })
+  .catch(() => { document.getElementById('visits').textContent = 'n/a'; });
 </script>
+
 
 
       
@@ -124,6 +114,7 @@
   </div>
 </body>
 </html>
+
 
 
 
