--- a/publications.html
+++ b/publications.html
@@ -55,40 +55,61 @@
 
         <!-- Published / Accepted -->
       <section>
-        <h3>Published / Accepted</h3>
-        <ol>
-          <li>
-            <strong>Robust Client-Server Quality Allocation via Ordered Weighted Averaging</strong><br />
-            <em>International Conference on Computing, Communication and Networking Technologies (ICCCNT) 2025 (IEEE), IIT Indore, India</em> <br /> 
-            Under Publication • Indexed in IEEE Xplore, Scopus
-          </li>
-          <li>
-            <strong>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</strong><br />
-            <em>International Conference on Artificial Intelligence and Applications (ICAIA) 2025 (Springer), MSIT Delhi, India</em> <br /> 
-            Under Publication • Indexed in zbMATH
-          </li>
-          <li>
-            <strong>Advances in Fuzzy Relation Inequalities and Optimization Techniques</strong><br />
-            <em>International Conference on Computational Intelligence, Communication Technology and Networking (CICTN) 2025 (IEEE), ABES Ghaziabad, India</em> <br />
-            <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">DOI</a> • Indexed in IEEE Xplore, Scopus
-          </li>
-        </ol>
-      </section>
+  <h3>Published / Accepted</h3>
+  <ol>
+    <li>
+      Udit Deo, J. K. Jain and M. M. S. Beg, 
+      <em>Robust Client–Server Quality Allocation via Ordered Weighted Averaging: A Multi-Objective Optimization Framework</em>, 
+      Proceedings of the International Conference on Computing, Communication and Networking Technologies (ICCCNT 2025), 
+      IIT Indore, India, 2025. 
+      <br />
+      Under Publication
+    </li>
+
+    <li>
+      Udit Deo, J. K. Jain and M. M. S. Beg, 
+      <em>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</em>, 
+      Proceedings of the International Conference on Artificial Intelligence and Applications (ICAIA 2025), 
+      MSIT Delhi, India, 2025. 
+      <br />
+      DOI: 
+      <a href="https://doi.org/10.1007/978-981-95-0493-0_10" target="_blank">
+        10.1007/978-981-95-0493-0_10
+      </a>
+    </li>
+
+    <li>
+      Udit Deo, J. K. Jain and M. M. S. Beg, 
+      <em>Advances in Fuzzy Relation Inequalities and Optimization Techniques</em>, 
+      Proceedings of the International Conference on Computational Intelligence, Communication Technology and Networking (CICTN 2025), 
+      ABES Ghaziabad, India, 2025. 
+      <br />
+      DOI: 
+      <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">
+        10.1109/CICTN64563.2025.10932336
+      </a> 
+    </li>
+  </ol>
+</section>
 
   <!-- Communicated -->
   <section>
-    <h3>Communicated / Under Review</h3>
-    <ol>
-      <li>
-        <strong>Multi-Objective Quality Allocation with OWA in Dynamic Server Networks</strong><br />
-        Communicated to <em>SN Computer Science</em> (Q2), Springer
-      </li>
-      <li>
-        <strong>CAST: A Novel Cost-Aware Segmentation Tree for Optimized Temporal Quality Analysis of Fuzzy Systems</strong><br />
-        Communicated to <em>Soft Computing</em> (Q2), Springer
-      </li>
-    </ol>
-  </section>
+  <h3>Communicated / Under Review</h3>
+  <ol>
+    <li>
+      Udit Deo, J. K. Jain and M. M. S. Beg, 
+      <em>Multi-Objective Quality Allocation with OWA in Dynamic Server Networks</em>, 
+      SN Computer Science, Under Review, 2025.
+    </li>
+
+    <li>
+      Udit Deo, J. K. Jain and M. M. S. Beg, 
+      <em>CAST: A Novel Cost-Aware Segmentation Tree for Optimized Temporal Quality Analysis of Fuzzy Systems</em>, 
+      Soft Computing, Under Review, 2025.
+    </li>
+  </ol>
+</section>
+
       
       <section>
         <h3><i class="fas fa-certificate"></i> Patent</h3>
@@ -103,6 +124,7 @@
   </div>
 </body>
 </html>
+
 
 
 
