--- a/publications.html
+++ b/publications.html
@@ -60,8 +60,7 @@
     <li>
       Udit Deo, J. K. Jain and M. M. S. Beg, 
       <em>Robust Client–Server Quality Allocation via Ordered Weighted Averaging: A Multi-Objective Optimization Framework</em>, 
-      Proceedings of the International Conference on Computing, Communication and Networking Technologies (ICCCNT 2025), 
-      IIT Indore, India, 2025. 
+      Proceedings of the International Conference on Computing, Communication and Networking Technologies (ICCCNT 2025), India, 2025. 
       <br />
       Under Publication
     </li>
@@ -69,24 +68,20 @@
     <li>
       Udit Deo, J. K. Jain and M. M. S. Beg, 
       <em>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</em>, 
-      Proceedings of the International Conference on Artificial Intelligence and Applications (ICAIA 2025), 
-      MSIT Delhi, India, 2025. 
+      Proceedings of the International Conference on Artificial Intelligence and Applications (ICAIA 2025), India, 2025. 
       <br />
-      DOI: 
       <a href="https://doi.org/10.1007/978-981-95-0493-0_10" target="_blank">
-        10.1007/978-981-95-0493-0_10
+        DOI
       </a>
     </li>
 
     <li>
       Udit Deo, J. K. Jain and M. M. S. Beg, 
       <em>Advances in Fuzzy Relation Inequalities and Optimization Techniques</em>, 
-      Proceedings of the International Conference on Computational Intelligence, Communication Technology and Networking (CICTN 2025), 
-      ABES Ghaziabad, India, 2025. 
+      Proceedings of the International Conference on Computational Intelligence, Communication Technology and Networking (CICTN 2025), India, 2025. 
       <br />
-      DOI: 
       <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">
-        10.1109/CICTN64563.2025.10932336
+        DOI
       </a> 
     </li>
   </ol>
@@ -124,6 +119,7 @@
   </div>
 </body>
 </html>
+
 
 
 
