--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,7 @@
       <em>A New Approach to Fuzzy Relation Inequalities: Effects of Variable Absence and Weighted Composition</em>, 
       Proceedings of the International Conference on Artificial Intelligence and Applications (ICAIA 2025), India, 2025. 
       <br />
-      <a href="https://doi.org/10.1007/978-981-95-0493-0_10" target="_blank">
+      <a href="https://link.springer.com/chapter/10.1007/978-981-95-0493-0_10" target="_blank">
         DOI
       </a>
     </li>
@@ -80,7 +80,7 @@
       <em>Advances in Fuzzy Relation Inequalities and Optimization Techniques</em>, 
       Proceedings of the International Conference on Computational Intelligence, Communication Technology and Networking (CICTN 2025), India, 2025. 
       <br />
-      <a href="https://doi.org/10.1109/CICTN64563.2025.10932336" target="_blank">
+      <a href="https://ieeexplore.ieee.org/document/10932336" target="_blank">
         DOI
       </a> 
     </li>
@@ -119,6 +119,7 @@
   </div>
 </body>
 </html>
+
 
 
 
