--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="info-card">
           <h4><i class="fas fa-award"></i> Highlights</h4>
-          <p>Patent granted (2025), JRF in UGC-NET, top 0.05% nationally, GATE CS & DA qualified.</p>
+          <p>UGC-JRF (087), GATE CS & DA qualified; Patent granted; M.Tech 2nd rank with Merit Certificate</p>
           <a href="bio.html#exams" class="card-button">More About Me</a>
         </div>
       </section>
@@ -114,6 +114,7 @@ fetch('https://abacus.jasoncameron.dev/hit/deoudit.github.io/visits')
   </div>
 </body>
 </html>
+
 
 
 
